[tool.poetry]
name = "competition-python"
version = "0.1.0"
description = ""
authors = ["OtsukaMasato"]
readme = "README.md"
packages = [{include = "competition_python"}]

[tool.poetry.dependencies]
python = "^3.10"
online-judge-tools = "^11.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
