[tool.poetry]
name = "competition-python"
version = "0.1.0"
description = ""
authors = ["OtsukaMasato"]
readme = "README.md"
packages = [{include = "competition_python"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
