[tool.poetry]
name = "competition-python"
version = "0.1.0"
description = ""
authors = ["OtsukaMasato"]
readme = "README.md"
packages = [{include = "competition_python"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beautifulsoup4 = "^4.12.0"
scipy = "^1.11.2"
ac-library-python = {git = "https://github.com/not522/ac-library-python"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
